0.5.1~pre1

 * Temporary workaround for "-VteTerminal-inner-border" property
 * Mouse clicking can also turn off urgency hint now

0.5.0

 The "One binary to rule them all!" Release

 * Fix a bug for -e option
 * Fix a bug for input method menu
 * New configure option: --with-gtk=2+3|3+2
   The binary will not link to VTE nor GTK+, thus can support GTK+ 2.x and 3.x
   at the same time. It still depends on VTE runtime, of course.
   Use --2 or --3 command line options to choose the version of GTK+.
   If evilvte segfaults with --3 option, please try export USE_ACCESSIBLE=0 or
   USE_ACCESSIBLE=1.
 * Drop codes with VTE version < 0.17.1

0.5.0~pre1
 * Sync COLOR_STYLE: ZENBURN with xterm
   Thanks to Artur Dryomov <me AT ming13 DOT ru>
   Previous ZENBURN is renamed to ZENBURN_DARK
 * Replace all deprecated functions that have suitable replacements
 * Make everything GTK+ 3.1.92 compatible
   Use GTK_FONT_CHOOSER_DIALOG only for GTK+ version >= 3.1.90
 * Make everything VTE 0.29.1 compatible
   If you encounter problems, try export CFLAGS="-DUSE_ACCESSIBLE=0"
   and rebuild evilvte.

0.4.9
 * Fix makefile parallelization
   Thanks to Thomas Weißschuh <thomas_weissschuh AT lavabit DOT com>
 * Use GTK_FONT_CHOOSER_DIALOG for GTK+ version >= 3.1.12
 * Expand VTE widget in GtkGrid

0.4.9~pre5
 * Support GtkGrid
 * Fix an SCROLLBAR minor bug with option OFF_L and OFF_R
 * New icon set under the license:
   GNU General Public License version 2 or any later version
   Thanks to Alexander Inglessi <inglessi AT gmail DOT com>
 * Use vte_terminal_fork_command() by default. Please see:
   http://evilvte.blogspot.com/2011/03/issue-evilvte-048-makes-zsh-segfault.html

0.4.9~pre4
 * Support SEARCH_CASE_SENSITIVE
   I will make it toggleable at runtime in the future.
   But I am lazy to write it now. :-P
   Patches are very welcome.
 * Make everything GLib 2.29.8 compatible
 * Sign SHA1SUMS using RSA key ID BE8BA819 and DSA key ID E98D6159

0.4.9~pre3