@@ -1,7 +1,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1,SHA512
 
-825a8d9cfe3334c2b629588ee981397d01656223  14427 ChangeLog
+7f492a75bba9315d84df15bbfb0db178117c781a  14539 ChangeLog
 8b869a67b40453fb41c8527e8aaf80f66c8a473f   2731 Makefile
 07b4f1de1ba206bdcadd2d234c89006f1b07388a   9882 configure
 4cc77b90af91e615a64ae04893fdffa7939db84c  18092 gpl-2.0.txt
@@ -21,23 +21,23 @@ eae1b0fb4deb0adbed4237bfbf7cea7022efa909   2373 misc/64.png
 83055c532a24e778aabd9b5aa86cf9ee3d1f17a9    353 misc/evilvte.xml
 c5ccf87f60b8039f34e8914edd866cce5564a3e4   1707 misc/manpage.1
 a83357473eb7c431a9f8e2813e02553d5ffa54b7    338 misc/showvte.1
-5775ba03008802114acc4eb75f92d4a3a4f30ea9   9985 src/config.h
-6c40aaddfff0337700db8eafb8de282d2cb240cd 154025 src/evilvte.c
-62fe66c3dbd2790f13e465b0dd47af2561f42785  14532 src/process.sh
+9f2b1a0173ab6bf2c281256a95d2584e92742950  10079 src/config.h
+50bd29406caa741749eca3194ce74d4329078f80 154450 src/evilvte.c
+b6d50176aaf9828bcdf63f8d52f8c8080fefd9f2  14792 src/process.sh
 -----BEGIN PGP SIGNATURE-----
 
-iEYEARECAAYFAk7MkT4ACgkQdEpXpumNYVl1lwCgg9HCujPUGgzwztuLb0Ozr3bD
-EMAAn1rIsA30+mGmitFwle8XPUt3dD4IiQIcBAEBCgAGBQJOzJE+AAoJELc3H0m+
-i6gZ7CoP/1v9VNWyov0KqjxBssW1WWmaKp8nH8PbQIBbKHuSWH/+RaIfAWTptZEN
-O1aCH9wwivUfSuwjvSWx/99joglVC+rPeXSdipWvgWy1VHEjjKtPlbQH0MTxMgXV
-dMtUs4H0LvERTGFdKsj6lLP+nkmTozb16QRWjELUc+MzuobNX0WNa/WO/BFu8GzE
-WqVv09pXSqdC/n49DbzK9xr61vwR6Xc7EQJ1JrBfDYpyuBXEfbDfLv/oX65S5chc
-gpfvBt/wPIWBBfxopg1OWZ3kzWrGTwJmJdhPfBFBLxZrbF0FxWw//eqvOBRSGOBl
-o7b2sQaT056nF37135ip8Ps0HhKr8xVLf7lvR/fBA87aK9+EDNwpzkMvEZ0A/mwE
-xl5eKMMKhLxOE94xNGuO7p3YT1cwqap4NqExPcTjq0v7cSgQQk3TyZ7zXhV6F1Ms
-e5EHlUQ/aRWzfcNGEmnO7fMhyZ1/gwFciop6aqMs4ThX2btCzu3C5dI/aJixNGXz
-PNb+os5Rv0DczV64chQDVnySDH38V7VXzBh5Bx3M/6artcU8zJhiDIvdOzNz0tmV
-6bjRm6VOo+UzGjpw4DgaEvLEOlOkQeT8/JPIiO+2Cb0jya2IKUM7bEwaJU4GOK+l
-W92CPSG35aQQBlcIYEF/1/U33pfz0/3TLdT/1oYlBnrdLWdDARkb
-=gdl9
+iEYEARECAAYFAk7m4gEACgkQdEpXpumNYVmg+gCbBVobGCLxEtqDwL7s3CgPwZZI
+G6UAnROL3yGLoUU0nRFlutzCoSRRiPmoiQIcBAEBCgAGBQJO5uIBAAoJELc3H0m+
+i6gZVPAQAKY9LI9PjRrui2KBcu5riBx1fRj/AM4on2nkCZ0N3On47aT+y4yGLWqK
+n0twTVVzwlUSsfqlwKSSoccHRyyDrqtGyIVtT/cifZyK22WMmfATmsB2EFZUUp91
+GpOo5oHVwpscAREj+9z/rAAhVF6ul61AoilvD7PCgBe++aHiAcev0KljpOyPsDzQ
+x77ydL3EporROSCt0n1Pep2Rjbidvedrm89dAdbVu36sBTyFND+uJ2y22pdiUlZw
+Zfhxa4zLkTqrx7nqQ3BFleIjnLYfv6xbnKY6o7c62FuLFpkEU5LWN4Kndd5irNIf
+yHXr+syQII48ywUE3BdH9U/FBJM+ddKz3kgrqifTMg1lQHEcfhJkIVJC9rUOITjn
+yL93RQsPIG6SHe9h23SSccwRl3g6AfK/4xIs0mBVaqhY0T0Pp02sfP2MVaBerxy6
+Uni4DPDeXQ9oY46HO0cgs7B8LwXDQTZtUeifrwM8DHSADVRUfZSLR4LD+MoO1Lwl
+OG5wCuQXT1XxDZ3UVAHXwiZ6O+qCQj49SUfIWrWVCspswbVPQTV0/HAPc/TQtAF3
+bv+ZXJMM7VLMsYT6jRytydPCVy0IG5vnYLqMASLUkf1t+QV/xppzoViZxn2A1+ly
+agAOkRZAQAww/NFUTt9GUKfoGAUqBD6f9zluxTqlIDUl5CDmRC9D
+=HkeK
 -----END PGP SIGNATURE-----
